--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107969720-3"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107969720-3"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
             gtag('config', 'UA-107969720-3');
-        </script> -->
+        </script>
         <!-- General meta tags needed-->
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -22,7 +22,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"> 
         
         <!-- CSS File -->
-        <link rel="stylesheet" href="dist/style.css?cb=1621244498006">
+        <link rel="stylesheet" href="dist/style.css?cb=1621244681458">
     </head>
     <body>
         <div class="background">
