--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"> 
         
         <!-- CSS File -->
-        <link rel="stylesheet" href="dist/style.css">
+        <link rel="stylesheet" href="dist/style.css?cb=1621244681458">
     </head>
     <body>
         <div class="background">
