updated salesforce copy and resume

--- a/index.html
+++ b/index.html
@@ -174,30 +174,28 @@
                       <span>Salesforce Industries - Salesforce</span>
                       </h1>
                     <p class="main-block__salesforce">
-                      <span>Salesforce is the leading Customer Relationship Management (CRM) platform. 
-                        It makes it possible to integrate every part of your company that interacts 
-                        with customers. Clients trust us to take them on a journey to success. 
-                        Salesforce Industries makes that even more possible, because they take the 
-                        native Salesforce CRM software and target specific industry verticals 
-                        (e.g. health, insurance, communications, energy and public sector - to name a few). 
-                        This makes it possible to target the needs of a specific industry and create a unique 
-                        CRM experience.
+                      <span>Salesforce is the leading Customer Relationship Management (CRM) platform 
+                        that helps bridge the gap between a company and it’s customers. Clients trust 
+                        us to take them on a journey to success. Salesforce Industries simplifies this 
+                        process by targeting specific industries (e.g. health, insurance, communications, 
+                        energy and public sector) to create a unique CRM experience tailored to your 
+                        customers needs.
                       </span>
                     </p>
                     <p class="main-block__salesforce">
-                      <span>With access to platform tools such as Omniscripts, DataRaptors, UI templates 
-                        and more, I was able to help craft dynamic user experiences for companies such as 
-                        Blue Cross Blue Shield Michigan (BCBSM) and Humana by integrating business forms 
-                        with customer data and displaying it in an easy-to-understand flow that creates a 
-                        seamless experience for the user.
+                      <span>Platform tools such as Omniscripts, DataRaptors, UI templates and more give me 
+                        the ability to craft dynamic user experiences for companies such as Blue Cross Blue 
+                        Shield Michigan (BCBSM) and Humana by integrating business forms with customer data 
+                        and displaying it in an easy-to-understand flow that creates a seamless experience 
+                        for the user.
                       </span>
                     </p>
                     <p class="main-block__salesforce">
-                      <span>I collaborated closely with the Accenture team for the Small Group Insurance 
-                        Quoting flow at BCBSM and consulted on best practices as well as developed processes 
-                        for Quoting, Enrollment, Renewal and Group Wide Changes. I worked on stories and bug 
-                        fixes discussed on our daily calls. My team was responsible for ensuring the 
-                        successful delivery of the Salesforce Industries platform.
+                      <span>I collaborated closely with Accenture for the Small Group Insurance Quoting flow 
+                        at BCBSM and consulted on best practices as well as developed processes for Quoting, 
+                        Enrollment, Renewal and Group Wide Changes. I worked on stories and bug fixes discussed 
+                        in our daily calls. My team was responsible for ensuring the successful delivery of 
+                        integration with the Salesforce Industries platform.
                       </span>
                       <div class="main-block__frameworks-container">
                         <div>Angular JS</div>
