--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                       </p>
                       <p class="main-block__intro">
                         <span class="info">Over the years, I’ve learned to do exactly that,
-                          using JavaScript, jQuery, VueJS, Angular, and more to craft elegant,
+                          using JavaScript, Angular, VueJS, React, and more to craft elegant,
                           efficient solutions to my users’ problems. I’d be happy to bring that
                           experience to your team and help you create something amazing.</span>
                       </p>
