update salesforce copy

--- a/index.html
+++ b/index.html
@@ -198,28 +198,29 @@
                       <span>Salesforce Industries - Salesforce</span>
                       </h1>
                     <p class="main-block__salesforce">
-                      <span>Salesforce is the leading Customer Relationship Management (CRM) platform 
-                        that helps bridge the gap between a company and it’s customers. Clients trust 
-                        us to take them on a journey to success. Salesforce Industries simplifies this 
-                        process by targeting specific industries (e.g. health, insurance, communications, 
-                        energy and public sector) to create a unique CRM experience tailored to your 
-                        customers needs.
+                      <span>Effectively connecting with customers is a critical concern for every
+                        business. As the leading customer relationship management (CRM)
+                        platform, Salesforce addresses this concern in every part of its offering to
+                        foster company growth and customer retention across industries.
                       </span>
                     </p>
                     <p class="main-block__salesforce">
-                      <span>Platform tools such as Omniscripts, DataRaptors, UI templates and more give me 
-                        the ability to craft dynamic user experiences for companies such as Blue Cross Blue 
-                        Shield Michigan (BCBSM) and Humana by integrating business forms with customer data 
-                        and displaying it in an easy-to-understand flow that creates a seamless experience 
-                        for the user.
+                      <span>Healthcare is one such industry—Salesforce has numerous clients in this
+                        vertical who require solutions that offer both efficiency and usability. I had
+                        the pleasure of working with Blue Cross Blue Shield Michigan (BCBSM), a
+                        healthcare insurer that needed help building out its Small Group Quoting
+                        process. Improving this process would result in more organized quoting
+                        and faster, more accurate turnarounds.
                       </span>
                     </p>
                     <p class="main-block__salesforce">
-                      <span>I collaborated closely with Accenture for the Small Group Insurance Quoting flow 
-                        at BCBSM and consulted on best practices as well as developed processes for Quoting, 
-                        Enrollment, Renewal and Group Wide Changes. I worked on stories and bug fixes discussed 
-                        in our daily calls. My team was responsible for ensuring the successful delivery of 
-                        integration with the Salesforce Industries platform.
+                      <span>My team was responsible for ensuring the successful delivery of integration
+                        with the Salesforce platform. In my role, I straddled the line between front
+                        end and back end. On one hand, I used UI templates and OmniScripts to
+                        craft dynamic, seamless user experiences. But I also integrated business
+                        forms with customer data using DataRaptors. In addition, I collaborated
+                        closely with Accenture, advising them on best practices using the
+                        Salesforce platform.
                       </span>
                       <div class="main-block__frameworks-container">
                         <div>Angular JS</div>
