--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         craft dynamic, seamless user experiences. But I also integrated business
                         forms with customer data using DataRaptors. In addition, I collaborated
                         closely with Accenture, advising them on best practices using the
-                        Salesforce platform.
+                        Salesforce Industries platform.
                       </span>
                       <div class="main-block__frameworks-container">
                         <div>Angular JS</div>
