--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <span class="info">So let’s make sure it’s flawless.</span>
                       </p>
                       <p class="main-block__intro">
-                        <span class="info">Over the years, I’ve learned to do exactly that,
+                        <span class="info">Over the years I’ve learned to do exactly that,
                           using JavaScript, Angular, VueJS, React, and more to craft elegant,
                           efficient solutions to my users’ problems. I’d be happy to bring that
                           experience to your team and help you create something amazing.</span>
@@ -195,7 +195,7 @@
                   </div>
                   <div class="main-block__salesforce">
                     <h1 class="main-block__salesforce main-block__salesforce--header">
-                      <span>Salesforce Industries - Salesforce</span>
+                      <span>Salesforce</span>
                       </h1>
                     <p class="main-block__salesforce">
                       <span>Effectively connecting with customers is a critical concern for every
