--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="view-project" href="resume.pdf" target="_blank">View Resume</a>
                         <div class="screen-info">
                           <h1>Simona Golebiewski</h1>
-                          <h2>Front End Developer</h2>
+                          <h2>Senior Front End Developer</h2>
                         </div>
                       </div>
                     </div>
