--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                   <div class="main-block__remote-dir">
                     <h1 class="main-block__remote-dir main-block__remote-dir--header">
                       <span class="title-text">Hiring Remotely</span>
-                      <span><a href="https://www.hiringremote.ly" target="_blank" class="title-link" style="display:none">Remote Directory</a></span>
+                      <span><a href="https://blissful-euler-a8be49.netlify.app/" target="_blank" class="title-link" style="display:none">Remote Directory</a></span>
                       </h1>
                     <p class="main-block__remote-dir">
                       <span>These days, most professionals in the tech industry understand that it’s possible to work online. However, it’s not always
