--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="screen-mask__image-wrapper">
                       <div class="screen-mask__image-wrapper--block" style="display: none" id="remote-dir">
-                        <a class="view-project" href="https://www.hiringremote.ly" target="_blank">View Project</a>
+                        <a class="view-project" href="https://blissful-euler-a8be49.netlify.app/" target="_blank">View Project</a>
                         <img src="assets/images/Remote.svg" />
                       </div>
                     </div>
